# python-sage-sms

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml  setup.py
docs/source/: conf.py  index.rst
docs/source/backends/: how_to_work.rst  index.rst
docs/source/getting_started/: index.rst  installation.rst  introduction.rst
sage_sms/: factory.py  services.py  utils.py  validators.py
sage_sms/backend/: base.py
sage_sms/backends/: base.py  smsir.py
sage_sms/design/interfaces/: provider.py
sage_sms/helper/: exceptions.py  type.py
